can create new users for each, user, brewery, venue, when sign up or log in happens, redirects to appropriate index page.

--- a/app/assets/views/singlePage.html
+++ b/app/assets/views/singlePage.html
@@ -9,17 +9,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.4.1/backbone.marionette.min.js"></script>
 <link type="text/css" rel="stylesheet" href="./css/styles.css">
 <body>
+<div id="navigation">
+</div>
 <div id="main">
 </div>
-<script type="text/template" id="breweryMain">
-  <h1>Brewery</h1>
-</script>
-<script type="text/template" id="userMain">
-  <h1>user</h1>
-</script>
-<script type="text/template" id="venueMain">
-  <h1>venue</h1>
-</script>
+<div id="new-beer">
+</div>
+<div id="suggested-beer">
+</div>
 
 <script src="./js/main.js"></script>
 </body>
