--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,21 +4,31 @@
   <title></title>
 </head>
 <link type="text/css" rel="stylesheet" href="./css/styles.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <body>
 <div id="video-container">
-  <video width="100%" height="100%" overflow="hidden" autoplay loop=>
+  <video width="100%" autoplay loop=>
     <source src="http://ak2.picdn.net/shutterstock/videos/267226/preview/stock-footage-beer-bubbles-seamless-loop.mp4">
   </video>
   <div id="login-form">
-  <img src="./imgs/logo.png">
+    <img src="./imgs/logo.svg">
     <form method="post" action="/login">
       <input name="email" placeholder="Email"/>
       <input name="password" type="password" placeholder="Password"/>
       <button>Login</button>
     </form>
-    <a href="/signup">Sign Up</a>
+    <div id="signup">
+      <div>Sign Up</div>
+        <div id="signup-dropdown">
+          <a href="/signup/user">User</a>
+          <a href="/signup/brewery">Brewery</a>
+          <a href="/signup/venue">Venue</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+<script src="./js/index.js"></script>
 
 </body>
 </html>
