--- a/app/views/user_signup.html
+++ b/app/views/user_signup.html
@@ -11,6 +11,9 @@
     <h1>User Sign up</h1>
     <form method="post" action="/signup">
       <input type="hidden" value="1" name="role_id"/>
+      <input name="firstname" placeholder="First Name"/>
+      <input name="lastname" placeholder="Last Name"/>
+      <input name="dob" placeholder="YYYY-MM-DD"/>
       <input name="email" placeholder="Email"/>
       <input name="password" type="password" placeholder="Password"/>
       <input name="confirm" type="password" placeholder="Confirm Password"/>
