--- a/app/views/venue_signup.html
+++ b/app/views/venue_signup.html
@@ -10,7 +10,10 @@
   <img src="./imgs/logo.png">
     <h1>Venue Sign up</h1>
     <form method="post" action="/signup">
-      <input type="hidden" value="3" name="role_id"/>
+      <input type="hidden" value="2" name="role_id"/>
+      <input name="firstname" placeholder="First Name"/>
+      <input name="lastname" placeholder="Last Name"/>
+      <input name="dob" placeholder="YYYY-MM-DD"/>
       <input name="email" placeholder="Email"/>
       <input name="password" type="password" placeholder="Password"/>
       <input name="confirm" type="password" placeholder="Confirm Password"/>
