--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,18 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: helvetica;
 }
 
 #video-container {
   width: 100%;
+  height: vh;
   overflow: hidden;
+  background-color: rgb(255, 172, 0);
+}
+
+video {
+  opacity: 0.2;
 }
 
 #login-form {
@@ -23,7 +30,39 @@
   padding: 10px;
   margin: 5px 0;
   border: none;
+  border-radius: 3px;
 }
 #login-form button {
   width: 200px;
+}
+#login-form img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#signup {
+  text-align: center;
+  padding: 10px;
+  font-size: 10px;
+}
+
+#signup-dropdown {
+  display: none;
+  width: 70%;
+  margin: 0 auto;
+  border-radius: 3px;
+  background-color: white;
+  margin-top: 10px;
+}
+
+#signup-dropdown a {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  text-decoration: none;
+}
+#signup-dropdown a:hover {
+  background-color: orange;
+  color: black;
 }
