got login and logout working real well, can serve up individual files to different user types, stuck on asynchronis issue with SPA

--- a/app/assets/javascript/backbone_marionette/views/templates/brewery_update_form.html
+++ b/app/assets/javascript/backbone_marionette/views/templates/brewery_update_form.html
@@ -1,6 +1,6 @@
-<script type="text/template" id="breweryInfo">
+
   <form method='POST' action='/brewery'>
     <input name='name' placeholder='Name'/>
     <input name='logo_url' placeholder='logo_url'/>
-  <button>Submit</button>
-</script>
+    <button>Submit</button>
+  <form>
