--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,7 +26,7 @@ video {
 #login-form {
   display: block;
   position: absolute;
-  top: 35%;
+  top: 30%;
   width: 200px;
   margin: 0 auto;
   right: 0;
@@ -94,4 +94,9 @@ video {
 #navigation img{
   width: 150px;
   margin-top: -10px;
+}
+
+#main {
+  width: 100%;
+  height: 500px;
 }
