--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,7 +96,11 @@ video {
   margin-top: -10px;
 }
 
-#main {
+#map {
   width: 100%;
   height: 500px;
+}
+
+img .searchResult {
+  width:300px;
 }
